# langextract-hybrid-llm-regex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
langcore_hybrid/: __init__.py  provider.py  rules.py
langextract_hybrid/: __init__.py  provider.py  rules.py
tests/: test_hybrid.py
